# Projeto-de-Multiprogramacao

./: .gitignore  CMakeLists.txt  README.md
data/: matriz1.txt  matriz2.txt  processo0.txt  processo1.txt  processo2.txt  processo3.txt  processo4.txt  processo5.txt  processo6.txt
src/: Auxiliar.cpp  Processos.cpp  Sequencial.cpp  Threads.cpp
